got all the things I said I did last time into the right folder so they will actully get pushed this time

--- a/main.css
+++ b/main.css
@@ -62,6 +62,11 @@ weapon > * {
     flex-shrink: 0;
 }
 
+spacing {
+    
+    width: 82px;
+}
+
 name {
     font-size: 40px;
     word-wrap: normal;
